--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^12.20.0",
     "@types/react": "^17.0.1",
+    "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "bootstrap": "^4.6.0",
+    "bootstrap-react": "^0.5.0-alpha.14",
     "bulma": "^0.9.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
