--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "bootstrap-react": "^0.5.0-alpha.14",
     "bulma": "^0.9.2",
